# data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pa_housing_dashboard_rough.html  pyproject.toml
.claude/: agents  settings.json
.claude/agents/: ci-fixer.md  pipeline-doctor.md
.github/workflows/: ci.yml  failure-triage.yml  refresh.yml
docs/: architecture.md
notebooks/: README.md  TEMPLATE_eda.ipynb
sql/: README.md
src/data_platform/: __init__.py  __main__.py  config.py
src/data_platform/integrations/: census.py  osm_amenities.py  pa_schools.py  zillow.py
src/data_platform/pipelines/: example.py  housing.py  regions.py
src/data_platform/reporting/: charts.py  dashboard.py  forensic.py  powerbi_export.py
src/data_platform/utils/: caching.py  logging.py
tests/: test_caching.py  test_census.py  test_charts.py  test_example_pipeline.py  test_housing.py  test_osm_amenities.py  test_pa_schools.py  test_regions.py  test_reporting.py
