[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-platform"
version = "0.1.0"
description = "Python data & automation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
analysis = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "openpyxl>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "nbstripout>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/data_platform"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=data_platform --cov-report=term-missing"

[tool.coverage.run]
source = ["src/data_platform"]
